--- a/index.html
+++ b/index.html
@@ -499,14 +499,18 @@
             margin-top: 3rem;
         }
 
-        .news-card {
-            background: white;
+        .news-card { 
+            min-width: 300px;
+            background: linear-gradient(135deg, #7D00B6, #9D4EDD);
+            color: white;
+            padding: 2rem;
             border-radius: 15px;
-            box-shadow: 0 5px 15px rgba(0,0,0,0.1);
-            overflow: hidden;
+            scroll-snap-align: start;
             transition: all 0.3s ease;
+            cursor: pointer;
             opacity: 0;
-            transform: translateY(30px);
+            transform: translateX(50px);
+
         }
 
         .news-card.animate {
