--- a/index.html
+++ b/index.html
@@ -510,6 +510,7 @@
             cursor: pointer;
             opacity: 0;
             transform: translateX(50px);
+            font-color: 
 
         }
 
@@ -528,7 +529,7 @@
         }
 
         .news-date {
-            color: #7D00B6;
+            color: #FFFFFF;
             font-size: 0.9rem;
             margin-bottom: 1rem;
         }
@@ -537,11 +538,11 @@
             font-family: 'Barlow', sans-serif;
             font-size: 1.3rem;
             margin-bottom: 1rem;
-            color: #333;
+            color: #FFFFFF;
         }
 
         .news-excerpt {
-            color: #666;
+            color: #FFFFFF;
             line-height: 1.6;
         }
     </style>
