--- a/index.html
+++ b/index.html
@@ -588,53 +588,53 @@
         <h2 class="section-title">Our Domains</h2>
         <div class="domains-container">
             <div class="domain-card">
-                <h3>MEDICAL EDUCATION</h3>
-                <p>Comprehensive medical programs designed to prepare future healthcare professionals with cutting-edge knowledge and practical skills.</p>
+                <h3>DOMAIN1</h3>
+                <p>DOMAIN.</p>
                 <button class="apply-btn">Apply Now</button>
             </div>
             <div class="domain-card">
-                <h3>RESEARCH & DEVELOPMENT</h3>
-                <p>Advancing medical science through innovative research projects and collaboration with leading institutions worldwide.</p>
+                <h3>DOMAIN</h3>
+                <p>DOMAIN</p>
                 <button class="apply-btn">Apply Now</button>
             </div>
             <div class="domain-card">
-                <h3>CLINICAL SERVICES</h3>
-                <p>Providing exceptional patient care through our state-of-the-art facilities and experienced medical professionals.</p>
+                <h3>DOMAIN</h3>
+                <p>DOMAIN.</p>
                 <button class="apply-btn">Apply Now</button>
             </div>
             <div class="domain-card">
-                <h3>COMMUNITY OUTREACH</h3>
-                <p>Engaging with local communities to promote health awareness and provide accessible healthcare services.</p>
+                <h3>DOMAIN</h3>
+                <p>DOMAIN.</p>
                 <button class="apply-btn">Apply Now</button>
             </div>
             <div class="domain-card">
-                <h3>STUDENT SERVICES</h3>
-                <p>Supporting our students with comprehensive services including counseling, career guidance, and academic support.</p>
+                <h3>DOMAIN</h3>
+                <p>DOMAIN</p>
                 <button class="apply-btn">Apply Now</button>
             </div>
             <div class="domain-card">
-                <h3>INTERNATIONAL PROGRAMS</h3>
-                <p>Global partnerships and exchange programs to provide students with international exposure and experiences.</p>
+                <h3>DOMAIN</h3>
+                <p>DOMAIN</p>
                 <button class="apply-btn">Apply Now</button>
             </div>
             <div class="domain-card">
                 <h3>CONTINUING EDUCATION</h3>
-                <p>Professional development programs for healthcare workers to stay updated with latest medical advancements.</p>
+                <p>DOMAIN</p>
                 <button class="apply-btn">Apply Now</button>
             </div>
             <div class="domain-card">
-                <h3>TECHNOLOGY INTEGRATION</h3>
-                <p>Leveraging cutting-edge technology to enhance learning experiences and improve healthcare delivery.</p>
+                <h3>DOMAIN</h3>
+                <p>DOMAIN</p>
                 <button class="apply-btn">Apply Now</button>
             </div>
             <div class="domain-card">
-                <h3>WELLNESS PROGRAMS</h3>
-                <p>Promoting holistic wellness among students, faculty, and staff through comprehensive wellness initiatives.</p>
+                <h3>DOMAIN</h3>
+                <p>DOMAIN</p>
                 <button class="apply-btn">Apply Now</button>
             </div>
             <div class="domain-card">
-                <h3>ALUMNI NETWORK</h3>
-                <p>Maintaining strong connections with our graduates and leveraging their expertise for institutional growth.</p>
+                <h3>DOMAIN</h3>
+                <p>DOMAIN</p>
                 <button class="apply-btn">Apply Now</button>
             </div>
         </div>
