--- a/index.html
+++ b/index.html
@@ -574,11 +574,11 @@
     <section class="hero" id="home">
         <div class="hero-content">
             <img src="https://i.postimg.cc/3RdDkJcS/1754671340110.png" alt="SMC Logo" class="college-logo">
-            <h1>Sargodha Medical College</h1>
-            <p>Excellence in Medical Education and Healthcare</p>
+            <h1>Student Research Forum</h1>
+            <p></p>Description </p>
             <button class="cta-button" onclick="toggleDescription()">View More</button>
             <div class="hero-description" id="heroDescription">
-                <p>SMC SRC is committed to providing world-class medical education, fostering innovation in healthcare, and developing compassionate healthcare professionals who serve our community with dedication and excellence.</p>
+                <p>bari description</p>
             </div>
         </div>
     </section>
@@ -951,16 +951,6 @@
                     date: "January 15, 2025",
                     title: "New State-of-the-Art Laboratory Inaugurated",
                     content: "SMC proudly announces the opening of our advanced pathology laboratory, equipped with the latest diagnostic equipment and technology."
-                },
-                {
-                    date: "January 10, 2025",
-                    title: "International Medical Conference 2025",
-                    content: "SMC will host the International Medical Education Conference, bringing together experts from around the world to share knowledge and innovations."
-                },
-                {
-                    date: "January 5, 2025",
-                    title: "Scholarship Program Launch",
-                    content: "We are pleased to announce the launch of our new merit-based scholarship program for deserving students from underserved communities."
                 }
             ];
             
