--- a/index.html
+++ b/index.html
@@ -693,7 +693,7 @@
         <div class="footer-content">
             <div class="footer-section">
                 <h3>About SMC SRC</h3>
-                <p>Sargodha Medical College is committed to excellence in medical education, research, and healthcare services, nurturing the next generation of healthcare professionals.</p>
+                <p>Society ki description</p>
                 <div class="footer-social">
                     <a href="#"><i class="fab fa-facebook"></i></a>
                     <a href="#"><i class="fab fa-instagram"></i></a>
@@ -707,7 +707,7 @@
             </div>
             <div class="footer-section">
                 <h3>Contact Info</h3>
-                <p>University of Sargodha<br>Sargodha, Punjab, Pakistan<br>Phone: +92-48-9230811<br>Email: official.srcsmc@gmail.com</p>
+                <p>University of Sargodha<br>Sargodha, Punjab, Pakistan<br>Phone: No.<br>Email: official.srcsmc@gmail.com</p>
             </div>
             <div class="footer-section">
                 <h3>Resources</h3>
@@ -715,7 +715,7 @@
             </div>
         </div>
         <div class="copyright">
-            <p>&copy; 2025 Sargodha Medical College SRC. All Rights Reserved.</p>
+            <p>&copy; 2025 SMC SRC. All Rights Reserved.</p>
         </div>
     </footer>
 
