--- a/index.html
+++ b/index.html
@@ -572,26 +572,26 @@
             margin: 0 auto;
         }
 
-        .news-grid {
-            display: flex;
+        .news-grid {      display: flex;
             gap: 2rem;
             overflow-x: auto;
             padding: 2rem 0;
             scroll-snap-type: x mandatory;
+      
         
         }
 
         .news-card { 
+            min-width: 300px;
             background: linear-gradient(135deg, #7D00B6, #9D4EDD);
             color: white;
+            padding: 2rem;
             border-radius: 15px;
-            overflow: hidden;
-            box-shadow: 0 10px 30px rgba(125, 0, 182, 0.2);
-            transition: all 0.4s ease;
+            scroll-snap-align: start;
+            transition: all 0.3s ease;
+            cursor: pointer;
             opacity: 0;
-            transform: translateY(30px);
-            animation: cardAppear 0.6s ease forwards;
-            animation-delay: calc(var(--delay) * 0.1s);
+            transform: translateX(50px);
         }
 
         @keyframes cardAppear {
