--- a/index (4).html
+++ b/index (4).html
@@ -157,7 +157,7 @@
       display:flex; align-items:center; justify-content:center; text-align:center;
       padding: 7rem 1.5rem 4rem;
       background:
-        linear-gradient(135deg, rgba(255,255,255,.75), rgba(255,255,255,.55)),
+        linear-gradient(135deg, rgba(48,0,72,0.9), rgba(28,0,48,0.8)),
         url('https://i.postimg.cc/FKPLFJDk/20250808-220626-0000.png') center/cover fixed no-repeat;
       overflow:hidden; isolation:isolate;
     }
