--- a/index.html
+++ b/index.html
@@ -479,7 +479,7 @@
 
       <ul class="nav-links">
         <li><a href="#home" aria-label="Go to Home">Home</a></li>
-        <li><a href="#about" aria-label="Go to About Us">About Us</a></li>
+        <li><a href="#about" aria-label="Go to About Us">Our Domain</a></li>
         <li><a href="#team" aria-label="Go to Our Team">Our Team</a></li>
         <li><a href="#contact" aria-label="Go to Contact Us">Contact Us</a></li>
         <li><a href="#faqs" aria-label="Go to FAQs">FAQs</a></li>
