--- a/index.html
+++ b/index.html
@@ -226,7 +226,8 @@
 
     .domains-container{
       max-width:1200px; margin:0 auto; display:flex; gap:1.2rem; overflow-x:auto; padding: .5rem .2rem 1.2rem;
-      scroll-snap-type: x mandatory; -webkit-overflow-scrolling: touch;
+      scroll-snap-type: x mandatory; -webkit-overflow-scrolling: touch; align-items: stretch;
+    
     }
     .domain-card{
       min-width:300px; scroll-snap-align:start; cursor:pointer; border-radius: var(--radius-lg); padding: 1.5rem;
@@ -235,6 +236,10 @@
       border: 1px solid rgba(17,17,17,.06); border-top-color: rgba(255,255,255,.95);
       backdrop-filter: blur(var(--blur)); -webkit-backdrop-filter: blur(var(--blur));
       box-shadow: var(--shadow-1), inset 0 1px 0 rgba(255,255,255,.9);
+      display: flex !important;
+  flex-direction: column !important;
+  justify-content: flex-start !important;
+  gap: 0.75rem !important;
     }
     .domain-card.animate{ opacity:1; transform: translateY(0) }
     .domain-card:hover{ transform: translateY(-8px) rotate(.4deg); box-shadow: var(--shadow-2) }
@@ -360,7 +365,7 @@
     }
     @media (max-width: 480px){
       .mobile-nav-links a{ font-size:1.25rem }
-      .domain-card, .team-card, .news-card{ min-width:100% }
+      .domain-card, .team-card, .news-card{ min-width:100% min-height: 440px }
       .cta-button{ padding: 12px 28px; font-size:1rem }
     }
 
