--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
     
     }
     .domain-card{
-      min-width:300px; scroll-snap-align:start; cursor:pointer; border-radius: var(--radius-lg); padding: 1.5rem;
+      min-width:300px; min-width:600px; scroll-snap-align:start; cursor:pointer; border-radius: var(--radius-lg); padding: 1.5rem;
       transition: transform .3s ease, box-shadow .3s ease, opacity .4s ease; opacity:0; transform: translateY(24px);
       color: var(--ink); background: linear-gradient( to bottom right, rgba(255,255,255,.9), rgba(255,255,255,.65) );
       border: 1px solid rgba(17,17,17,.06); border-top-color: rgba(255,255,255,.95);
