--- a/index (6).html
+++ b/index (6).html
@@ -157,7 +157,7 @@
       display:flex; align-items:center; justify-content:center; text-align:center;
       padding: 7rem 1.5rem 4rem;
       background:
-        linear-gradient(135deg, rgba(255,255,255,.75), rgba(255,255,255,.55)),
+        linear-gradient(135deg, rgba(48,0,72,0.9), rgba(28,0,48,0.8)),
         url('https://i.postimg.cc/FKPLFJDk/20250808-220626-0000.png') center/cover fixed no-repeat;
       overflow:hidden; isolation:isolate;
     }
@@ -531,7 +531,7 @@
 <body>
   <div class="scroll-progress" id="scrollProgress" aria-hidden="true"></div>
 
-   Navbar: glass removed, solid white 
+   
   <nav class="navbar" id="navbar" aria-label="Primary navigation">
     <div class="nav-container">
       <div class="nav-email" aria-label="Contact email">
@@ -586,8 +586,8 @@
     <div class="hero-content">
       <div class="hero-main">
         <img src="https://i.postimg.cc/3RdDkJcS/1754671340110.png" alt="SMC logo" class="college-logo" />
-        <h1>Student Research Forum</h1>
-        <p>Advancing Medical Research & Education</p>
+        <h1></h1>
+        <p></p>
         <button class="cta-button" onclick="toggleDescription()" aria-controls="heroDescription" aria-expanded="false">View More</button>
       </div>
 
@@ -603,22 +603,12 @@
     <h2 class="section-title" id="domains-title">Our Domains</h2>
     <div class="domains-container">
       <article class="domain-card" tabindex="0" aria-label="Clinical Research domain card">
-        <h3>Clinical Research</h3>
-        <p>Patient-centered studies in hospital settings.</p>
+        <h3>long headings</h3>
+        <p>lambi description </p>
         <button class="apply-btn">Apply Now</button>
       </article>
 
-      <article class="domain-card" tabindex="0" aria-label="Public Health domain card">
-        <h3>Public Health</h3>
-        <p>Population-level insights and health policy. Longer text here to demonstrate the button stays pinned at the bottom regardless of content length inside the card.</p>
-        <button class="apply-btn">Apply Now</button>
-      </article>
-
-      <article class="domain-card" tabindex="0" aria-label="Biomedical Informatics domain card">
-        <h3>Biomedical Informatics</h3>
-        <p>Data, AI, and clinical decision support.</p>
-        <button class="apply-btn">Apply Now</button>
-      </article>
+    
     </div>
   </section>
 
