--- a/index.html
+++ b/index.html
@@ -1272,7 +1272,7 @@
         <div class="carousel-container">
           <div class="carousel-slides" id="hero-carousel-slides">
             <div class="carousel-slide">
-              <img src="/placeholder.svg" alt="Hero Image 1" loading="lazy" data-hero-image="0" />
+              <img src="https://i.postimg.cc/KvcvKf63/Screenshot-2025-08-03-16-21-53-365-com-vblast-flipaclip.png" alt="Hero Image 1" loading="lazy" data-hero-image="0" />
             </div>
             <div class="carousel-slide">
               <img src="/placeholder.svg" alt="Hero Image 2" loading="lazy" data-hero-image="1" />
