--- a/index.html
+++ b/index.html
@@ -598,7 +598,7 @@
       display: flex;
       align-items: center;
       padding: 2rem 0;
-      background: linear-gradient(135deg, var(--bg) 0%, #f8f6ff 100%);
+      background: linear-gradient(135deg, var(--bg) 0%, #ffffff 100%);
       position: relative;
       overflow: hidden;
     }
@@ -1364,12 +1364,6 @@
   }
   .stat-label {
     font-size: 0.65rem;        /* smaller label */
-  }
-  /* Optional: reduce large hero/carousel height on small screens */
-  .carousel-container,
-  .hero {
-    aspect-ratio: 16 / 7; /* less tall on phones */
-    max-height: 44vh;
   }
  
 
