--- a/index.html
+++ b/index.html
@@ -1369,7 +1369,7 @@
   @media (max-width: 768px) {
   /* Make carousel less tall on phones */
   .carousel-container {
-    max-height: 40vh;   /* shrink height */
+    max-height: auto;   /* shrink height */
     aspect-ratio: 16 / 9;
   }
   .carousel-slide img {
