--- a/index.html
+++ b/index.html
@@ -429,14 +429,14 @@
     .scroll-top.visible{ opacity:1; visibility:visible; transform: translateY(0) }
     .scroll-top svg{ width:22px; height:22px }
 
-    .hamburger{ display:none; width:30px; height:20px; position:relative; cursor:pointer; z-index: 1150; }
+    .hamburger{ display:none; width:20px; height:15px; position:relative; cursor:pointer; z-index: 1250; }
     .hamburger span{ position:absolute; left:0; width:100%; height:3px; background: var(--ink); border-radius:3px; transition: all .3s ease; }
     .hamburger span:nth-child(1){ top:0 } .hamburger span:nth-child(2){ top:9px } .hamburger span:nth-child(3){ top:18px }
     .hamburger.active span:nth-child(1){ top:9px; transform: rotate(135deg); } .hamburger.active span:nth-child(2){ opacity:0 }
     .hamburger.active span:nth-child(3){ top:9px; transform: rotate(-135deg); }
 
     .mobile-menu{
-      position:fixed; inset:0; z-index:1140; display:flex; flex-direction:column; align-items:center; justify-content:center;
+      position:fixed; inset:0; z-index:1240; display:flex; flex-direction:column; align-items:center; justify-content:center;
       transform: translateY(-100%); opacity:0; transition: all .5s ease; padding:2rem;
       background: linear-gradient( to bottom right, rgba(255,255,255,.95), rgba(255,255,255,.7) );
       border-top: 1px solid rgba(17,17,17,.06); backdrop-filter: blur(var(--blur)); -webkit-backdrop-filter: blur(var(--blur));
@@ -598,7 +598,7 @@
       display: flex;
       align-items: center;
       padding: 2rem 0;
-      background: linear-gradient(135deg, var(--bg) 0%, #ffffff 100%);
+      background: #fff;
       position: relative;
       overflow: hidden;
     }
@@ -812,7 +812,7 @@
       display: flex;
       align-items: center;
       padding: 2rem 0;
-      background: linear-gradient(135deg, var(--bg) 0%, #f8f6ff 100%);
+      background: #fff;
       position: relative;
       overflow: hidden;
     }
@@ -820,7 +820,7 @@
     .hero-content {
       display: grid;
       grid-template-columns: 1fr 1fr;
-      gap: 4rem;
+      gap: 2rem;
       align-items: center;
       max-width: 1200px;
       margin: 0 auto;
@@ -847,7 +847,7 @@
 
     .hero-actions {
       display: flex;
-      gap: 1rem;
+      gap: 0.5rem;
       flex-wrap: wrap;
     }
 
