--- a/index.html
+++ b/index.html
@@ -1409,6 +1409,12 @@
     text-align: center;            /* center align for neat look */
   }
       }
+  .carousel-slide img {
+  max-width: 100%;   /* never overflow screen */
+  width: 100%;       /* scale to container width */
+  height: auto;      /* keep aspect ratio */
+  display: block;    /* remove inline gaps */
+  }
 
   </style>
 </head>
