--- a/index.html
+++ b/index.html
@@ -1515,9 +1515,11 @@ Builds awareness of research ethics among members.</p>
         <p>Manages the student research journal’s publication process.
 Collaborates with editorial and graphics domains.
 Provides a platform for showcasing student research work</p>
+        
 
     </div>
               <div>
+            </section>
 
                   <section class="section" id="about" aria-labelledby="domains-title">
     <h2 class="section-title" id="domains-title">Our Domains</h2>
@@ -1557,6 +1559,7 @@ Provides a platform for showcasing student research work</p>
 
     </div>
                     <div>
+                  </section>
 
                         <section class="section" id="about" aria-labelledby="domains-title">
     <h2 class="section-title" id="domains-title">Our Domains</h2>
