--- a/index.html
+++ b/index.html
@@ -1365,6 +1365,25 @@
   .stat-label {
     font-size: 0.65rem;        /* smaller label */
   }
+  @media (max-width: 768px) {
+  .carousel-container {
+    height: auto !important;     /* override any fixed height */
+    min-height: unset !important;
+    max-height: unset !important;
+  }
+  .carousel-slides {
+    height: auto !important;
+  }
+  .carousel-slide {
+    height: auto !important;
+  }
+  .carousel-slide img {
+    height: auto !important;     /* natural image scaling */
+    object-fit: contain !important;
+    display: block;
+  }
+  }
+  
 
   </style>
 </head>
