--- a/index.html
+++ b/index.html
@@ -1522,6 +1522,51 @@
   /* Safety: nothing above should steal the pointer */
   .domains-container * { pointer-events: auto; }
 }
+  /* ====== Hero / Carousel mobile-friendly overrides ====== */
+/* Place at the end of your CSS file to override earlier duplicated rules */
+
+.hero {
+  min-height: auto !important;        /* don't force full-viewport height on small screens */
+  height: auto !important;
+  padding: 0 !important;
+  overflow: hidden;
+  box-sizing: border-box;
+}
+
+/* Use a contained carousel with 16:9 aspect on large screens,
+   but limit its height on small screens so it never overflows. */
+.carousel-container {
+  width: 100%;
+  max-width: 1200px;
+  margin: 0 auto;
+  aspect-ratio: 16 / 9;
+  max-height: 60vh;      /* restrict vertical size on phones */
+  overflow: hidden;
+  border-radius: 12px;
+}
+
+/* Images scale responsively — on mobile use contain to avoid cropping that changes layout */
+.carousel-slide img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;            /* nice full-bleed on desktop */
+}
+
+/* Mobile-specific: make carousel shorter and images use contain */
+@media (max-width: 768px) {
+  .carousel-container {
+    aspect-ratio: unset;        /* use max-height instead */
+    height: auto;
+    max-height: 48vh;          /* ~half the phone screen — adjust as needed */
+  }
+  .carousel-slide img {
+    object-fit: contain !important; /* prevents the image from exceeding container height */
+    max-height: 48vh !important;
+  }
+
+  /* Also ensure hero doesn't have forced min-heights elsewhere */
+  .hero, .hero-content, .hero-media { min-height: 0 !important; height: auto !important; }
+}
   
   </style>
 </head>
@@ -1570,21 +1615,21 @@
       </div>
 
   </nav>
+<!-- HERO (replace existing block) -->
+<section class="hero" id="hero" aria-label="Hero">
+  <div class="carousel-container" aria-hidden="false">
+    <div class="carousel-slides" id="carousel-slides" aria-live="polite">
+      <!-- JS will append .carousel-slide img elements here -->
+    </div>
 
-    <!-- Hero Section -->
- <section class="hero" id="hero" aria-label="Hero">
-  <div class="carousel-slides" id="carousel-slides" aria-live="polite"></div>
-   
     <div class="carousel-dots" id="carouselDots" aria-hidden="false">
-      <div class="carousel-dot active" data-index="0" onclick="goToSlide(0)"></div>
-      <div class="carousel-dot" data-index="1" onclick="goToSlide(1)"></div>
-      <div class="carousel-dot" data-index="2" onclick="goToSlide(2)"></div>
-      <div class="carousel-dot" data-index="3" onclick="goToSlide(3)"></div>
+      <button class="carousel-dot active" data-index="0" onclick="goToSlide(0)" aria-label="Go to slide 1"></button>
+      <button class="carousel-dot" data-index="1" onclick="goToSlide(1)" aria-label="Go to slide 2"></button>
+      <button class="carousel-dot" data-index="2" onclick="goToSlide(2)" aria-label="Go to slide 3"></button>
+      <button class="carousel-dot" data-index="3" onclick="goToSlide(3)" aria-label="Go to slide 4"></button>
     </div>
   </div>
-</section>
-   </div>
-        </div> <!-- end .domains-container -->
+</section> <!-- end .domains-container -->
             <section class="section" id="about" aria-labelledby="domains-title">
     <h2 class="section-title" id="domains-title">Our Domains</h2>
     <div class="domains-container">
